Fixed many objects being allowed to receive a null, should solve rare edge case issues.