@@ -17,7 +17,6 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class ArenaSelectGUI implements Listener {
 
@@ -28,36 +27,36 @@ public class ArenaSelectGUI implements Listener {
     public ArenaSelectGUI(XDBLArena plugin) {
         this.plugin = plugin;
 
-        INVENTORY_NAME = MiniMessage.miniMessage().deserialize(plugin.getConfig().getString("messages.arena_select_gui.inventory_name"));
+        INVENTORY_NAME = MiniMessage.miniMessage().deserialize(Objects.requireNonNull(plugin.getConfig().getString("messages.arena_select_gui.inventory_name")));
 
         Bukkit.getPluginManager().registerEvents(this, plugin);
     }
 
     public void reloadConfig() {
 
-        INVENTORY_NAME = MiniMessage.miniMessage().deserialize(plugin.getConfig().getString("messages.arena_select_gui.inventory_name"));
+        INVENTORY_NAME = MiniMessage.miniMessage().deserialize(Objects.requireNonNull(plugin.getConfig().getString("messages.arena_select_gui.inventory_name")));
     }
 
     public void openGUI(Player inviter) {
         List<Arena> arenas = plugin.getArenaManager().getArenas()
-                .stream().filter(a -> a.isPublic() || a.getOwner().equals(inviter.getName())).collect(Collectors.toList());
+                .stream().filter(a -> a.isPublic() || a.getOwner().equals(inviter.getName())).toList();
 
         // size is from arenas.size() and must be devidable by 9
         int size = Math.max(9, (arenas.size() + 8) / 9 * 9);
 
-        Inventory inv = Bukkit.createInventory(null, size, MiniMessage.miniMessage().deserialize(plugin.getConfig().getString("messages.arena_select_gui.inventory_name")));
+        Inventory inv = Bukkit.createInventory(null, size, MiniMessage.miniMessage().deserialize(Objects.requireNonNull(plugin.getConfig().getString("messages.arena_select_gui.inventory_name"))));
 
         Map<Integer, Arena> arenasSelectSlots = new HashMap<>();
 
         int i = 0;
-        for (Arena a : arenas.stream().filter(a -> a.getState() == Arena.ArenaState.WAITING).collect(Collectors.toList())) {
-            ItemStack is = new ItemStack(Material.getMaterial(
-                    plugin.getConfig().getString("messages.arena_select_gui.arena_item.item")
-            ));
+        for (Arena a : arenas.stream().filter(a -> a.getState() == Arena.ArenaState.WAITING).toList()) {
+            ItemStack is = new ItemStack(Objects.requireNonNull(Material.getMaterial(
+                    Objects.requireNonNull(plugin.getConfig().getString("messages.arena_select_gui.arena_item.item"))
+            )));
             ItemMeta meta = is.getItemMeta();
             meta.displayName(
                     MiniMessage.miniMessage().deserialize(
-                    plugin.getConfig().getString("messages.arena_select_gui.arena_item.name")
+                    Objects.requireNonNull(plugin.getConfig().getString("messages.arena_select_gui.arena_item.name"))
                     .replace("%arena_name%", a.getName())
                     .replace("%arena_owner%", a.getOwner()))
             );
@@ -92,11 +91,11 @@ public class ArenaSelectGUI implements Listener {
 
         e.setCancelled(true);
 
-        if (e.getCurrentItem() == null || e.getCurrentItem().getType() == null || e.getCurrentItem().getType() == Material.AIR) {
+        if (e.getCurrentItem() == null || e.getCurrentItem().getType() == Material.AIR) {
             return;
         }
 
-        if (e.getClickedInventory().getType() == InventoryType.PLAYER) {
+        if (Objects.requireNonNull(e.getClickedInventory()).getType() == InventoryType.PLAYER) {
             return;
         }
 
@@ -107,7 +106,7 @@ public class ArenaSelectGUI implements Listener {
 
         if (arena == null || arena.getState() != Arena.ArenaState.WAITING) {
             inviter.sendMessage(
-                    MiniMessage.miniMessage().deserialize(plugin.getConfig().getString("messages.arena_select_gui.arena_not_ready"))
+                    MiniMessage.miniMessage().deserialize(Objects.requireNonNull(plugin.getConfig().getString("messages.arena_select_gui.arena_not_ready")))
             );
             return;
         }
@@ -115,17 +114,17 @@ public class ArenaSelectGUI implements Listener {
         InviteManager.Invite invite = plugin.getInviteManager().selectingInvites.get(inviter);
 
         inviter.sendMessage(
-                MiniMessage.miniMessage().deserialize(plugin.getConfig().getString("messages.pvp.invite.invite_sent")
+                MiniMessage.miniMessage().deserialize(Objects.requireNonNull(plugin.getConfig().getString("messages.pvp.invite.invite_sent"))
                         .replace("%player%", invite.invited.getName()))
         );
 
-        String invite_message = plugin.getConfig().getString("messages.arena_select_gui.invite_message")
+        String invite_message = Objects.requireNonNull(plugin.getConfig().getString("messages.arena_select_gui.invite_message"))
                 .replace("%inviter%", inviter.getName())
                 .replace("%totemsenabled%", arena.hasTotems() ? "<green>enabled" : "<red>disabled")
                 .replace("%arena_name%", arena.getName())
                 .replace("%winchance%", plugin.getPlayerManager().CalculateWinChance(invite.invited.getUniqueId(), inviter.getUniqueId()) + "%");
 
-        plugin.getServer().getPlayer(invite.invited.getUniqueId()).sendMessage(MiniMessage.miniMessage().deserialize(invite_message));
+        Objects.requireNonNull(plugin.getServer().getPlayer(invite.invited.getUniqueId())).sendMessage(MiniMessage.miniMessage().deserialize(invite_message));
 
         invite.arena = arena;
         plugin.getInviteManager().selectingInvites.remove(inviter);
